# opp

./: .gitignore
lab1/: .~lock.lab1_Дюганов_19203.doc#  CMakeLists.txt  MPI_v1.cpp  MPI_v2.cpp  MPI_v2_2.cpp  Matrix.h  lab1.cpp  lab1.sh  lab1_.sh  lab1_0.sh  lab1_1.sh  lab1_2.sh  lab1_2_2.sh  lab1_Дюганов_19203.doc  nonMPI.cpp
lab1/from_hpc/: MPI_v1.cpp  MPI_v2.cpp  Matrix.h  lab1_.sh  lab1_1.sh  lab1_2.sh  nonMPI.cpp
lab1/lab1_v3/: MPI_v1.cpp  MPI_v2.cpp  lab1_v3.sln  lab1_v3.vcxproj  lab1_v3.vcxproj.filters  main.c  main.cpp  nonMPI.cpp
lab1/lab1_v3/Debug/: lab1_v3.exe.recipe  lab1_v3.ilk  lab1_v3.vcxproj.FileListAbsolute.txt  vc142.idb
lab1/lab1_v3/Debug/lab1_v3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab1_v3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab1/lab1_v3/x64/Debug/: vc142.idb
lab1/lab1_v3/x64/Debug/lab1_v3.tlog/: lab1_v3.lastbuildstate
lab1/scripst/: lab1_0.sh  lab1_1-1.sh  lab1_2.sh
lab1/task/: comment_lab1.docx
lab2/: CMakeLists.txt  lab2.cpp  lab2_vec.cpp  lab2_vec_parallel.cpp  lab2_vec_parallel_1.cpp  lab2_vec_parallel_2.cpp  lab2_Дюганов_19203.doc
lab3/: .~lock.lab3_Дюганов_19203.doc#  CMakeLists.txt  lab3.sh  lab3_Дюганов_19203.doc  main.cpp  old_main.cpp
lab4/: CMakeLists.txt  lab4.sh  lab4_Дюганов_19203.doc  main.cpp
lab5/: CMakeLists.txt  lab5.cpp  lab5_Дюганов_19203.doc  main.cpp
lab5/task/: .~lock.comments_lab5_may_2021.doc#  comments_lab5_may_2021.doc
other/L1_help/: Lab1_2_anastasia.cpp  lab1_Kravchenko_19203_1.doc
other/L2_help/: lab2.cpp  lab2_Kravchenko_19203.doc  (+1 more)
(+16 files in other folders)
